# FinSight

./: .env.example  .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
backend/: __init__.py  config.py  dependencies.py  main.py  schemas.py  taxonomy.py
backend/agents/: analytics.py  anomaly.py  categorisation.py  chat.py  forecast.py  goal.py  ingestion.py  orchestrator.py  reconciliation.py  recurring.py
backend/db/: repository.py  schema.py
backend/llm/: provider.py
backend/models/: transaction.py
backend/rag/: store.py
backend/routers/: analytics.py  anomalies.py  chat.py  forecast.py  goals.py  health.py  recurring.py  transactions.py  upload.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  types.ts
frontend/src/api/: client.ts  endpoints.ts
frontend/src/components/: Card.tsx  DateRangeBar.tsx  EmptyState.tsx  KpiCard.tsx  Layout.tsx  Spinner.tsx
frontend/src/hooks/: useDateRange.ts
frontend/src/lib/: format.ts
frontend/src/pages/: AnomaliesPage.tsx  ChatPage.tsx  DashboardPage.tsx  ForecastPage.tsx  GoalsPage.tsx  InsightsPage.tsx  MonthlyMapPage.tsx  RecurringPage.tsx  TransactionsPage.tsx  UploadPage.tsx
scripts/: dev.sh
