[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-finance-intelligence"
version = "0.1.0"
description = "Personal finance intelligence — parse bank/wallet statements, categorise, and analyse spending."
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "openpyxl>=3.1",
    "xlrd>=2.0",
    "python-dotenv>=1.0",
    "pydantic>=2.5",
    "openai>=1.10",
    "pdfplumber>=0.10",
    "langgraph>=1.0",
    "langchain-openai>=1.0",
    "langchain-core>=1.0",
    "scipy>=1.10",
    "qdrant-client>=1.12",
    "fastembed>=0.4",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["."]
